maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ')' expected but 'if' found.
if(aMurOuest(Xo,Yo==false) {
^JediEscaper:18: error: ')' expected but 'if' found.
if(aMurSud(Xo,Yo==false) {
^JediEscaper:21: error: ')' expected but 'if' found.
if(aMurEst(Xo,Yo==false) {
^JediEscaper:24: error: ')' expected but '}' found.
} 
^